Fix bugs , self incjection in MatchingService